force-app/main/default/objects/hed__Contact_Language__c/fields/hed__Contact__c.field-meta.xml
<CustomField>
    <fullName>hed__Contact__c</fullName>
    <description>The person who speaks this language.</description>
    <inlineHelpText>La personne qui parle cette langue.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Languages</relationshipLabel>
    <relationshipName>Contact_Languages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>