force-app/main/default/objects/hed__Contact_Language__c/fields/hed__Fluency__c.field-meta.xml
<CustomField>
    <fullName>hed__Fluency__c</fullName>
    <description>The fluency with which this person speaks this language.</description>
    <inlineHelpText>La facilité avec laquelle cette personne parle cette langue.</inlineHelpText>
    <label>Fluency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fluent</fullName>
            </value>
            <value>
                <fullName>A1</fullName>
            </value>
            <value>
                <fullName>A2</fullName>
            </value>
            <value>
                <fullName>B1</fullName>
            </value>
            <value>
                <fullName>B2</fullName>
            </value>
            <value>
                <fullName>C1</fullName>
            </value>
            <value>
                <fullName>C2</fullName>
            </value>
            <value>
                <fullName>Beginner</fullName>
                <isActive>false</isActive>
                <label>Beginner</label>
            </value>
            <value>
                <fullName>Intermediate</fullName>
                <isActive>false</isActive>
                <label>Intermediate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>