force-app/main/default/objects/hed__Contact_Language__c/fields/hed__Language__c.field-meta.xml
<CustomField>
    <fullName>hed__Language__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>A language this person speaks.</description>
    <inlineHelpText>Une langue que cette personne parle.</inlineHelpText>
    <label>Language</label>
    <referenceTo>hed__Language__c</referenceTo>
    <relationshipLabel>Contact Languages</relationshipLabel>
    <relationshipName>Contact_Languages</relationshipName>
    <type>Lookup</type>
</CustomField>