force-app/main/default/objects/hed__Contact_Language__c/fields/hed__Primary_Language__c.field-meta.xml
<CustomField>
    <fullName>hed__Primary_Language__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this is the language of choice for this person.</description>
    <inlineHelpText>Indique si la langue a été choisie par cette personne.</inlineHelpText>
    <label>Primary Language</label>
    <type>Checkbox</type>
</CustomField>