force-app/main/default/objects/hed__Contact_Language__c/fields/SIS_Date_de_test__c.field-meta.xml
<CustomField>
    <fullName>SIS_Date_de_test__c</fullName>
    <label>Date de test</label>
    <type>Date</type>
</CustomField>