force-app/main/default/objects/hed__Contact_Language__c/fields/SIS_Dispense_test__c.field-meta.xml
<CustomField>
    <fullName>SIS_Dispense_test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dispense test</label>
    <type>Checkbox</type>
</CustomField>