force-app/main/default/objects/hed__Contact_Language__c/fields/SIS_LST_Langue__c.field-meta.xml
<CustomField>
    <fullName>SIS_LST_Langue__c</fullName>
    <label>Langue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Açores</fullName>
            </value>
            <value>
                <fullName>Afghanistan</fullName>
            </value>
            <value>
                <fullName>Afrique du Sud</fullName>
            </value>
            <value>
                <fullName>Aland (îles)</fullName>
            </value>
            <value>
                <fullName>Alaska</fullName>
            </value>
            <value>
                <fullName>Albanie</fullName>
            </value>
            <value>
                <fullName>Algérie</fullName>
            </value>
            <value>
                <fullName>Allemagne</fullName>
            </value>
            <value>
                <fullName>Andorre</fullName>
            </value>
            <value>
                <fullName>Angola</fullName>
            </value>
            <value>
                <fullName>Anguilla</fullName>
            </value>
            <value>
                <fullName>Antigua et Barbuda</fullName>
            </value>
            <value>
                <fullName>Antilles Néerlandaises</fullName>
            </value>
            <value>
                <fullName>Arabie Saoudite</fullName>
            </value>
            <value>
                <fullName>Argentine</fullName>
            </value>
            <value>
                <fullName>Arménie</fullName>
            </value>
            <value>
                <fullName>Aruba</fullName>
            </value>
            <value>
                <fullName>Ascension</fullName>
            </value>
            <value>
                <fullName>Australie</fullName>
            </value>
            <value>
                <fullName>Autriche</fullName>
            </value>
            <value>
                <fullName>Azerbaïdjan</fullName>
            </value>
            <value>
                <fullName>Bahamas</fullName>
            </value>
            <value>
                <fullName>Bahreïn</fullName>
            </value>
            <value>
                <fullName>Baléares</fullName>
            </value>
            <value>
                <fullName>Bangladesh</fullName>
            </value>
            <value>
                <fullName>Barbade</fullName>
            </value>
            <value>
                <fullName>Belgique</fullName>
            </value>
            <value>
                <fullName>Belize</fullName>
            </value>
            <value>
                <fullName>Bénin</fullName>
            </value>
            <value>
                <fullName>Bermudes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>