force-app/main/default/objects/hed__Contact_Language__c/fields/SIS_Test_langue__c.field-meta.xml
<CustomField>
    <fullName>SIS_Test_langue__c</fullName>
    <label>Test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IELTS</fullName>
            </value>
            <value>
                <fullName>TOEFL</fullName>
            </value>
            <value>
                <fullName>Linguaskill</fullName>
            </value>
            <value>
                <fullName>TOEIC</fullName>
            </value>
            <value>
                <fullName>BEC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>